# GeomPrimitive

./: .gitignore
gshapes/: .gitignore  README.md  pyproject.toml
gshapes/demo/: demo1.py  demo2.py
gshapes/src/drafts/: mpl_line_color.py  mpl_line_style.py  synthetic_image_class.py
gshapes/src/drafts/general/: synthetic_image.py  synthetic_image_reuse.py
gshapes/src/drafts/synthetic_draw/: Thread Safety.md  line_drawer.py  main.py  orchestration.py  primitive_drawer.py  rng.py
gshapes/src/drafts/synthetic_draw/rng_no_thread_safety/: rng_no_thread_safety.py
gshapes/src/drafts/synthetic_draw/v1/: worker.py
gshapes/src/drafts/synthetic_draw/v2_proc/: primitive_drawer.py
gshapes/src/gshapes/: __init__.py  base.py  core.py  line.py  line_meta.schema.yml  primitive_drawer.py  rng.py  utils.py
gshapes/tests/: test_core.py
journal/: Init.md  QnA.md  README.md
primitives/: .gitignore  MULTIPROCESSING.md  pytest.ini  q
primitives/src/: README.md
primitives/src/pet/: Grid Detection.md  LSD_Health_Check.py  Local Contrast Normalization.md  README.md  hist_viewer.py  pet_allinone.py  pet_config.py  pet_debug.py  pet_exposure.py  pet_exposure_doc.py  pet_geom.py  pet_grid_Sobel_detect.py  pet_utils.py  (+16 more)
primitives/tests/: conftest.py  test_base.py  test_determinism.py  test_line.py  test_line_determinism_fullspec.py  test_matplotlib_integration.py  test_mpl_grid_gen.py  test_mpl_grid_utils.py  test_mpl_path_utils.py  test_rng.py  test_spt_color.py  test_spt_correction_engine.py  test_spt_geometry.py  test_spt_lighting.py  test_spt_noise.py  test_spt_texture.py
(+125 files in other folders)
